test/vm/errors/parser/bad_type_lowercase_field.ach
// Parser error: lowercase type name with "did you mean?" hint
// Expected: error with suggestion "(did you mean `Field`?)"

public x: field
